# SemiFantasyConsole-TortuMecha

./: .gitignore  ConsoleSpecs.md  launcher.py  pyproject.toml  readme.md  requirements.txt
examples/hello_tortu/: main.py  tortu.project
examples/hello_tortu/dialogues/: robot1_lvl1.json
examples/hello_tortu/languages/: DialogslVl1.csv  GUI.csv
tortuengine/: __init__.py  background.py  bake.py  build_executable.py  cart.py  cart_manifest.py  constants.py  dialogue.py  engine.py  export_cart.py  game_settings.py  gui_layer.py  image.py  instance_api.py  instance_scripts.py  localization.py  object.py  palette.py  pip_bar.py  progress_bar.py  project.py  scene.py  scene_renderer.py  script_codegen.py  sprite.py  sprite_font.py  text_font.py  tileset.py
tortuplayer/: __init__.py  __main__.py  display.py  player.py  scene_player.py
tortustudio/: __init__.py  __main__.py  asset_browser.py  asset_drag.py  background_editor.py  build_dialog.py  collapsible.py  color_key_widget.py  font_editor.py  gui_layer_editor.py  mainwindow.py  new_background_dialog.py  new_gui_layer_dialog.py  new_object_dialog.py  new_pip_bar_dialog.py  new_progress_bar_dialog.py  new_scene_dialog.py  new_sprite_dialog.py  new_sprite_font_dialog.py  new_text_font_dialog.py  new_tileset_dialog.py  object_editor.py  object_strip.py  palette_editor.py  pip_bar_editor.py  pip_bar_strip.py  progress_bar_editor.py  progress_bar_strip.py  scene_assets.py  scene_editor.py  sound_editor.py  sprite_editor.py  sprite_font_editor.py  tileset_editor.py  viewport.py  workspace_tabs.py
(+121 files in other folders)
